# rtlscout

./: .env.template  .gitignore  .gitmodules  LICENSE  README.md  README_add_benchmarks.md  README_fpmul.md  README_multirun.md  README_multistage.md  README_new.md  add_benchmark.py  batch_eval.py  extract_best_designs.py  extract_pareto.py  extract_sweep_pareto.py  plot_area_delay.py  plot_area_delay_with_ref.py  plot_multirun.py  plot_multistage.py  plot_pareto_paper.py  plot_results.py  pyproject.toml  requirements.txt  run_benchmark.py  run_eval.py  run_model.py  run_multirun.py  run_multistage.py  run_pipeline.py  run_sweep.py
.devcontainer/: Dockerfile  build_image.sh  devcontainer.json  entrypoint.sh  post_create.sh  pull_image.sh  setup_workspace.sh  start_container.sh
.github/workflows/: pytest-image.yml  pytest.yml
benchmarks/: rtl_rewriter_compare.json
benchmarks/add16/: metadata.json  tb.sv
benchmarks/add32/: metadata.json  tb.sv
benchmarks/add8/: metadata.json  tb.sv
core/: agent.py  benchmarks.py  correctness.py  cost.py  equivalence.py  evaluation.py  fake_provider.py  llm_client.py  multirun.py  multistage.py  prompts.py  runner.py  spirehdl_readme.md
experiments/: dr_rtl_multirun.py  plot_rtl_rewriter_multirun.py  recount_rtl_rewriter_transistors.py  rtl_rewriter.md  rtl_rewriter_multirun.py  run_cost_language_sweep.py  run_rtl_rewriter.py  table_dr_rtl_adp_multirun.py  table_dr_rtl_multirun.py  table_rtl_rewriter.py  table_rtl_rewriter_multirun.py
make/: power.tcl
tests/: conftest.py  test_equivalence.py  test_integration.py
(+364 files in other folders)
